href corrected from Contact to contact

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
     <hr>
     <a href="Hobbies.html"><strong>Hobbies</strong></a>
     <hr>
-    <a href="Contact.html"><strong>Contact Information</strong></a>
+    <a href="contact.html"><strong>Contact Information</strong></a>
   </body>
 </html>
