--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <!-- image directly from the folder
           <img src="mypic.jpg" alt="Real Ravi Kumar">
           -->
-          <h2><em>Description</em>: <i><strong>My personal website</strong></i></h2>
+          <h2><em>Curriculum Vitae</em></h2>
           <p>Ambitious Software developer, Learning web development.</p>
         </td>
       </tr>
