--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
   <body>
     <table cellspacing='10'>
       <tr>
-        <td><img src="https://imageio.forbes.com/blogs-images/chunkamui/files/2011/10/Steve-Jobs-1955-2011-426x252-custom-300x177.jpg?format=jpg&width=960" alt="Ravi Kumar Pic">
-        </td>
+        <td>
+          <img src="Ravi kumar pic.jpg" alt="Real Ravi Kumar">
+          <!--
+          <img src="https://imageio.forbes.com/blogs-images/chunkamui/files/2011/10/Steve-Jobs-1955-2011-426x252-custom-300x177.jpg?format=jpg&width=960" alt="Ravi Kumar Pic">
+          -->       
+         </td>
         <td>
           <h1>Ravi Kumar</h1>
           <!-- image directly from the folder
